Manejo de productos finalizado

--- a/gestor_veterinaria/src/index.html
+++ b/gestor_veterinaria/src/index.html
@@ -16,13 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body onload="clicker()">
-  <script type="text/javascript">
-    function clicker(){
-      let reef=document.getElementById('nextBTN');
-      reef.click()
-    }
-  </script>
+<body>
   <app-root></app-root>
 </body>
 </html>
